--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- <link rel="stylesheet" href="about.css"> -->
     <meta name="robots" content="index, follow">
     <meta name="description" content="The Shubham Group is a leading real estate firm in Delhi NCR, known for property in Mukteshwar Nainital, property in Haridwar and best builder in Delhi NCR.">
-    <meta property="og:image" content="https://www.indusvalleymukteshwar.com/img/adh_tsgc_w.png"> <!-- Specify the URL of your shared image -->
+    <meta property="og:image" content="https://www.ambikadivinityharidwar.com/img/adh_tsgc.png"> <!-- Specify the URL of your shared image -->
     <meta property="og:url" content="https://www.theshubhamgoc.com/">
     <link rel="shortcut icon" href="img/favicon.png" type="image/x-icon" >
     
